--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^12.2.16",
     "@angular/service-worker": "^12.2.16",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jquery": "^3.5.14",
     "ag-charts-angular": "^6.0.0",
     "ag-charts-community": "^6.0.2",
@@ -31,9 +32,11 @@
     "bootstrap": "^4.4.1",
     "bootstrap-icons": "^1.8.3",
     "core-js": "^2.5.4",
+	"file-saver": "^2.0.5",
     "jquery": "^3.5.1",
     "jsencrypt": "^3.2.1",
     "local-storage": "^2.0.0",
+	"ngx-filesaver": "^12.0.0",
     "rxjs": "~6.5.4",
     "script-loader": "^0.7.2",
     "tslib": "^2.3.1",
