修正 template, 改用假資料

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "frontend",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,6 +21,7 @@
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/pwa": "^12.2.18",
     "@angular/router": "^12.2.16",
     "@angular/service-worker": "^12.2.16",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
@@ -32,11 +33,11 @@
     "bootstrap": "^4.4.1",
     "bootstrap-icons": "^1.8.3",
     "core-js": "^2.5.4",
-	"file-saver": "^2.0.5",
+    "file-saver": "^2.0.5",
     "jquery": "^3.5.1",
     "jsencrypt": "^3.2.1",
     "local-storage": "^2.0.0",
-	"ngx-filesaver": "^12.0.0",
+    "ngx-filesaver": "^12.0.0",
     "rxjs": "~6.5.4",
     "script-loader": "^0.7.2",
     "tslib": "^2.3.1",
